@@ -47,6 +47,7 @@ public:
     virtual void SetEditable(bool editable);
 
     virtual void SetMaxLength(unsigned long len);
+    virtual void ForceUpper();
 
 #if wxUSE_UXTHEME
     virtual bool SetHint(const wxString& hint);
@@ -97,6 +98,9 @@ private:
     friend class wxTextAutoCompleteData;
 #endif // wxUSE_OLE
 };
+
+// We don't need the generic version.
+#define wxHAS_NATIVE_TEXT_FORCEUPPER
 
 #endif // _WX_MSW_TEXTENTRY_H_
 
